--- a/package.json
+++ b/package.json
@@ -323,6 +323,7 @@
     "@changesets/cli": "^2.27.12",
     "@types/bun": "^1.2.0",
     "@types/cross-spawn": "^6.0.6",
+    "@types/deno": "^2.0.0",
     "@types/node": "^22.10.10",
     "@types/which": "^3.0.4",
     "denoify": "^1.6.16",
