🚚 Rename the spawn module to subprocess

--- a/deno.json
+++ b/deno.json
@@ -26,9 +26,9 @@
     "./punycode": "./deno/punycode.ts",
     "./querystring": "./deno/querystring.ts",
     "./readline": "./deno/readline.ts",
-    "./spawn": "./deno/spawn.ts",
     "./stream": "./deno/stream.ts",
     "./string_decoder": "./deno/string_decoder.ts",
+    "./subprocess": "./deno/subprocess.ts",
     "./timers": "./deno/timers.ts",
     "./tls": "./deno/tls.ts",
     "./tty": "./deno/tty.ts",
