✨ Add `pm` and `runtime` module

--- a/deno.json
+++ b/deno.json
@@ -13,6 +13,7 @@
     "./diagnostics_channel": "./deno/diagnostics_channel.ts",
     "./dns": "./deno/dns.ts",
     "./events": "./deno/events.ts",
+    "./find_up": "./deno/find_up.ts",
     "./fs": "./deno/fs.ts",
     "./http": "./deno/http.ts",
     "./http2": "./deno/http2.ts",
@@ -22,10 +23,12 @@
     "./os": "./deno/os.ts",
     "./path": "./deno/path.ts",
     "./perf_hooks": "./deno/perf_hooks.ts",
+    "./pm": "./deno/pm.ts",
     "./process": "./deno/process.ts",
     "./punycode": "./deno/punycode.ts",
     "./querystring": "./deno/querystring.ts",
     "./readline": "./deno/readline.ts",
+    "./runtime": "./deno/runtime.ts",
     "./stream": "./deno/stream.ts",
     "./string_decoder": "./deno/string_decoder.ts",
     "./subprocess": "./deno/subprocess.ts",
